fix FF overflow hidden

--- a/htdocs/t/party/party.css
+++ b/htdocs/t/party/party.css
@@ -77,7 +77,7 @@ html.msie-7 .ingredient-preview { filter: progid:DXImageTransform.Microsoft.Alph
 #ingredients-part,
 #tools-part,
 #things-part { overflow: hidden; margin-bottom: 10px; }
-#things-part { margin-bottom: 0; }
+#things-part { margin-bottom: 0; padding-bottom: 3px; }
 
 #purchase-plan .table .head { font-size: 18px; font-weight: bold; padding: 0 0 10px 0; border-bottom: 2px solid #777; text-indent: -1px; }
 #purchase-plan .table .list .ingredient { position: relative; padding: 9px 0 10px 0; border-bottom: 1px solid #f2f2f2; }
